add language support for new option

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -76,5 +76,17 @@
     },
     "Fruehling": {
         "message": "Frühling"
+    },
+    "ModulHinzufuegen": {
+        "message": "Modul hinzufügen"
+    },
+    "ModulEntfernen": {
+        "message": "Modul entfernen"
+    },
+    "Speichern": {
+        "message": "Speichern"
+    },
+    "Entfernen": {
+        "message": "Entfernen"
     }
 }
